Created folder structure, compile and run script, updated README