@@ -1,9 +1,4 @@
 # WORDLE CLONE
 
 ## Linux compilation
-> export PATH\_TO\_FX=path/to/javafx-sdk-22/lib
->
-> javac --module-path $PATH\_TO\_FX --add-modules javafx.controls main\_file.java
->
-> java --module-path $PATH\_TO\_FX --add-modules javafx.controls HelloFX
-
+Run compile\_and\_run.sh in command line
